[gd_scene load_steps=7 format=2]

[ext_resource path="res://Lighting.gd" type="Script" id=1]
[ext_resource path="res://Tileset/Decoraciones/Rayo/LightningTexture.png" type="Texture" id=2]
[ext_resource path="res://Sonidos/Ambiente/Trueno.wav" type="AudioStream" id=3]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.846473, 0.645455 ), 0.0, 0.0, 0, 0, Vector2( 0.995851, 0.190909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Environment" id=2]
background_mode = 4
background_canvas_max_layer = 1
glow_enabled = true
glow_levels/1 = true
glow_levels/7 = true
glow_intensity = 1.29
glow_strength = 1.43
glow_blend_mode = 0
glow_hdr_threshold = 2.0

[sub_resource type="Animation" id=3]
resource_name = "Flash"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MainBolt:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.780392 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.231373 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "movePosition"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Lighting" type="Node2D"]
modulate = Color( 1.4, 1.4, 1.4, 1 )
position = Vector2( 12.889, 49.2 )
script = ExtResource( 1 )

[node name="MainBolt" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.780392 )
points = PoolVector2Array( 0, 0, 615.294, -38.289 )
width_curve = SubResource( 1 )
default_color = Color( 0.94902, 0.94902, 0.760784, 1 )
texture = ExtResource( 2 )
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="LightingAnimation" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Musica"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
